--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,10 @@ ul {
 .adre_a:focus {
   color: #404bbf;
 }
+
+.burger-menu{
+  display: none;
+}
 /* first section */
 .first-section {
   background-color: #2e2f42;
@@ -773,25 +777,42 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   .header-nav-list {
     flex-direction: column;
   }
+.container{
+  display: flex;
+  flex-direction: column;
+}
 
+
+.header-nav-list{
+  display: none;
+
+}
+
+.address{
+  display: none;
+}
+.burger-menu{
+  display:block;
+  weight: 100%;
+  cursor: pointer;
+}
  
   .first-section-title {
-   
-
+  
 font-size: 36px;
-
-
   }
   .second-section {
   padding-top: 96px;
   padding-bottom: 96px;
 }
 .second-section-list {
-  display: flex;
-width: 288px;
 flex-direction: column;
-align-items: flex-start;
+
 gap: 8px;
+}
+
+.second-section-item{
+  width: 100%; 
 }
 
 
@@ -830,8 +851,7 @@ flex-shrink: 0;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  max-width: 320px;
+  max-width: 1440px;
   margin: 0 auto;
 }
   }
-}
