--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,29 @@ ul {
 .burger-menu{
   display: none;
 }
+
+.mobile-container{
+  display: none;
+
+}
+
+.mobile-nav-item{
+
+font-size: 36px;
+
+line-height: 1.11;
+letter-spacing: 0.02em;
+
+}
+
+
+
+
+.mobile-social-list{
+  display: inline-flex;
+align-items: flex-start;
+gap: 40px;
+}
 /* first section */
 .first-section {
   background-color: #2e2f42;
@@ -796,6 +819,17 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   weight: 100%;
   cursor: pointer;
 }
+
+.mobile-container{
+  display: flex;
+}
+.mobile-nav-list{
+  display: flex;
+  flex-direction: column;
+}
+.mobile-nav-item{
+  gap: 40px;
+}
  
   .first-section-title {
   
@@ -851,7 +885,6 @@ flex-shrink: 0;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  max-width: 1440px;
-  margin: 0 auto;
+
 }
   }
