--- a/css/styles.css
+++ b/css/styles.css
@@ -913,7 +913,7 @@ flex-shrink: 0;
 .second-section-list {
   display: flex;
 flex-direction: column;
-gap: 8px;
+column-gap: 8px;
 }
 
 .title-section-s{
@@ -943,9 +943,94 @@ font-weight: 500;
 .third-section-list {
   display: flex;
   flex-direction: column;
-  gap: 72px;
+  column-gap: 72px;
 }
 
+.fourth-section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.fourth-section-list {
+ 
+  display: flex;
+width: 288px;
+padding-bottom: 32px;
+flex-direction: column;
+align-items: flex-start;
+column-gap: 32px;
+}
+
+/* footer */
+.footer {
+ 
+  padding-top: 97.5px;
+  padding-bottom: 96px;
+}
+
+
+.p-footer {
+  margin-top: 16px;
+  max-width: 288px;
+  margin-bottom: 72px;
+}
+
+.footer-container {
+  display: flex;
+ flex-direction: column;
+}
+
+.logo-footer {
+ display: inline-flex;
+height: 24px;
+align-items: center;
+flex-shrink: 0;
+margin-left: 102px;
+
+
+}
+
+.social-item-footer {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 16px;
+}
+
+.social-list-footer{
+  display: inline-flex;
+align-items: flex-start;
+gap: 16px;
+margin-bottom: 72px;
+}
+
+
+
+
+.text-subsribe {
+  margin-bottom: 16px;
+ 
+}
+
+
+.label-form {
+  gap: 24px;
+}
+
+
+.email-style {
+ width: 288px;
+height: 40px;
+flex-shrink: 0;
+}
+
+
+.subscribe-btn {
+  display: inline-flex;
+padding: 8px 24px;
+gap: 16px;
+}
+
+
+/* footer end */
   }
 
 
