--- a/css/styles.css
+++ b/css/styles.css
@@ -25,15 +25,19 @@ ul {
   margin: 0;
 }
 
+.mobile-button{
+  display: none;
+}
 
-.mobile-adress-container{
+.mobile-container{
   display: none;
 }
 
 
-.mobile-social-container{
+.mobile-address{
   display:none;
 }
+
 /* header */
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -147,13 +151,68 @@ ul {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/officetable.jpg);
+    url(../images/hero-mobile-1x.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   max-width: 1440px;
   margin: 0 auto;
 }
+
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2ddpx) {
+  .first-section{
+     background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-mobile-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .first-section{
+     background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-tablet-1x.jpg);}
+
+}
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      .first-section{
+     background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-tablet-2x.jpg);}
+    }
+
+
+@media screen and (min-width: 1158px) {
+  .first-section{
+     background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-desktop-1x.jpg);}
+    }
+
+      @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      .first-section{
+     background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-desktop-2x.jpg);}
+    }
+   
+
 
 .first-section-title {
   font-size: 56px;
@@ -995,7 +1054,7 @@ gap: 16px;
 } */
 
 /* footer end */
-  }
+  /* } */
 
 
   /* @media screen and (min-width: 321px){
@@ -1020,8 +1079,8 @@ margin-left: 120px;
 }
 .adress-list {
   column-gap: 12px; */
-}
-} */ */
+/* }
+} */ */ */
 
 
  
@@ -1129,19 +1188,19 @@ margin-bottom: 40px;
 }
 
 .mobile-address{
-  margin-top: 168px;
+
+
+
+}
+
+/* .mobile-adress-list{
+    margin-top: 168px;
   margin-bottom: 48px;
   display: flex;
-flex-direction: column;
-align-items: flex-start;
+  flex-direction: column;
 column-gap: 24px; 
-
-}
-
-.mobile-address-item{
-  gap:24px;
-  
-}
+align-items: flex-start;
+} */
 
 .mobile-adre-tel{
   color:#4d5ae5;
@@ -1200,6 +1259,16 @@ column-gap: 24px;
    font-size: 24px;
 }
 
+
+.mobile-address{
+  margin-top: auto;
+  margin-bottom: 40px;
+}
+
+.mobile-address-item:last-child{
+  margin-top: 24px;
+}
+
     /* end */
 
 
@@ -1256,7 +1325,62 @@ column-gap: 24px;
   }
 }
   
+@media screen and (min-width: 768px) {
+.adre_a{
+ color: #434455;
+font-size: 12px;
+font-weight: 400;
+line-height: 1.17;
+letter-spacing: 0.04em;
+ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
 
+@media screen and (min-width: 1158px) {
+.adre_a{
+  font-size: 16px;
+  line-height: 1.5;
+  display: inline-block;
+}
+}
     /*  */
 
+    /* first section */
+@media screen and (max-width: 1157px) {
+  .first-section {
+    padding: 112px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .first-section {
+    padding: 188px 0;
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .icons-second-section {
+   display: none;
+  }
+}
+
+@media screen and (max-width: 767x) {
+  .header-nav__item{
+   display: none;
+  }
+}
+
+@media screen and (max-width: 767x) {
+  .address{
+   display: none;
+  }
+}
+
+
+
+
+    /* end */
+
+
+    /* images  */
 
