--- a/css/styles.css
+++ b/css/styles.css
@@ -603,15 +603,7 @@ button {
   margin: auto;
 }
 /* etc */
-.icons-second-section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  margin-bottom: 8px;
-}
+
 
 .container-modal-window {
   position: fixed;
@@ -1377,10 +1369,229 @@ letter-spacing: 0.04em;
 }
 
 
+@media screen and (min-width: 768px) {
+  .first-section-title{
+        font-size: 56px;
+    line-height: 1.07;
+    max-width: 496px;
+    margin: 0 auto 36px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .first-section-title{
+    margin: 0 auto 48px;
+  }
+}
+
+/* second section */
+
+@media screen and (max-width: 1157px) {
+  .second-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .second-section {
+    padding: 120px 0;
+  }
+}
+
+@media screen and (max-width: 767px){
+.second-section-list{
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+}
+}
+
+@media screen and (min-width: 768px) {
+  .second-section-list{
+        display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 72px;
+    column-gap: 24px;
+  }
+}
+
+@media screen and (min-width: 1158px){
+  .second-section-list{
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .second-section-item {
+    width: calc((100% - 24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .second-section-item {
+    width: calc((100% - 72px) / 4);
+  }
+}
+
+.icons-second-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+@media screen and (max-width: 1157px){
+  .icons-second-section{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px){
+.title-section-s{
+text-align: start;
+}
+}
+
+@media screen and (min-width: 1158px) {
+  .title-section-s {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .p-section-s {
+    font-weight: 400;
+  }
+}
 
 
     /* end */
 
+/* third section */
+
+@media screen and (max-width: 1157px) {
+  .third-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .third-section {
+    padding: 120px 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .third-section-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+}
+
+
+@media screen (max-width: 767px) { 
+  .third-section-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 72px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .third-section-list {
+    flex-wrap: nowrap;
+    gap: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .images-background {
+    width: calc((100%-24px) / 2);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .images-background {
+    width: calc((100%-72px) / 4);
+  }
+}
+
+
 
     /* images  */
 
+
+    /* fourth section*/
+    fourth-section
+
+    @media screen and (max-width: 1157px) {
+  .fourth-section {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .fourth-section {
+    padding: 120px 0;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1157px){
+.fourth-container{
+width: 768px;
+}
+
+}
+
+@media screen and (min-width: 768px) {
+  .fourth-section-list {
+    column-gap: 24px;
+    row-gap: 72px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .fourth-section-list{
+    column-gap: 24px;
+    row-gap:  48px;
+  }
+}
+ @media screen and ( min-width: 1158px){
+  .fourth-section-item{
+    width: calc ((100%-48px)/3);
+  }
+ }
+
+ @media screen and (max-width: 767px){
+  .fourth-section-item{
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+}
+ }
+
+ @media screen (min-width: 768px) and (max-width: 1157px){
+  .fourth-section-item{
+    width: ((100%-24px)/3);
+  }
+ }
+
+
+
+ /* footer */
+
+
+
+/*  */
